--- a/AnotherMonitor/build.gradle
+++ b/AnotherMonitor/build.gradle
@@ -1,3 +1,4 @@
+import java.util.regex.*
 buildscript {
     repositories {
         jcenter()
@@ -26,7 +27,21 @@ android {
         versionCode 20
         versionName "1.2.0"
     }
-
+task('increaseVersionCode') << {
+        def manifestFile = file("src/main/AndroidManifest.xml")
+        def pattern = Pattern.compile("versionCode=\"(\\d+)\"")
+        def manifestText = manifestFile.getText()
+        def matcher = pattern.matcher(manifestText)
+        matcher.find()
+        def versionCode = Integer.parseInt(matcher.group(1))
+        def manifestContent = matcher.replaceAll("versionCode=\"" + ++versionCode + "\"")
+        manifestFile.write(manifestContent)
+    }
+    tasks.whenTaskAdded { task ->
+        if (task.name == 'generateReleaseBuildConfig') {
+            task.dependsOn 'increaseVersionCode'
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_6
         targetCompatibility JavaVersion.VERSION_1_6
